--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  name: Hosted VS2017
+  name: Hosted Windows 2019 with VS2019
   demands:
   - msbuild
   - visualstudio
