--- a/Microsoft.VisualStudio.MiniEditor/Microsoft.VisualStudio.MiniEditor.csproj
+++ b/Microsoft.VisualStudio.MiniEditor/Microsoft.VisualStudio.MiniEditor.csproj
@@ -382,7 +382,7 @@
     <EmbeddedResource Include="$(BaseEditorPath)Text\Impl\BraceCompletion\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LogicalName>Microsoft.VisualStudio.Text.BraceCompletion.Implementation.Strings.resources</LogicalName>
-      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Text\Impl\BraceCompletion\Strings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.Text.BraceCompletion.Implementation</CustomToolNamespace>
     </EmbeddedResource>
   </ItemGroup>
